# victoriabank-mia-sdk-python

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: action-pypi-publish.yml
src/victoriabank-mia-sdk/: __init__.py
src/victoriabank_mia_sdk/: victoriabank_mia_api.py  victoriabank_mia_auth.py  victoriabank_mia_sdk.py
