[project]
name = "victoriabank-mia-sdk"
version = "1.0.0"
authors = [
  { name="Alexander Minza" },
]
description = "Python SDK for Victoriabank MIA API"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["victoriabank", "moldova", "mia", "qr", "rtp", "payments", "api", "sdk", "python"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
license.text = "GPL-3.0-or-later"

[project.urls]
Homepage = "https://github.com/alexminza/victoriabank-mia-sdk-python"
Issues = "https://github.com/alexminza/victoriabank-mia-sdk-python/issues"
Repository = "https://github.com/alexminza/victoriabank-mia-sdk-python"
